--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <!-- Add the base tag -->
-    <base href="/">
+    <base href="./">
 
     <title>Angular QuickStart</title>
     <meta charset="UTF-8">
@@ -22,6 +22,9 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="public/assets/adminLTE2/css/skins/_all-skins.min.css">
+
+    <!-- iCheck -->
+    <link rel="stylesheet" href="public/assets/plugins/iCheck/square/blue.css">
 
 
     <!-- Polyfill(s) for older browsers -->
