use jQuery and iCheck success

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <!-- AdminLTE Skins. Choose a skin from the css/skins
          folder instead of downloading all of them to reduce the load. -->
     <link rel="stylesheet" href="public/assets/adminLTE2/css/skins/_all-skins.min.css">
+    <!-- iCheck -->
+    <link rel="stylesheet" href="public/assets/plugins/iCheck/square/blue.css">
 
     <!-- jQuery 2.2.3 -->
     <script src="public/assets/plugins/jQuery/jquery-2.2.3.min.js"></script>
