--- a/angular/app/login/login-form.html
+++ b/angular/app/login/login-form.html
@@ -34,15 +34,15 @@
 
         <div class="social-auth-links text-center">
             <p>- OR -</p>
-            <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using
+            <a routerLink="/register" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using
                 Facebook</a>
-            <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using
+            <a routerLink="/register" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using
                 Google+</a>
         </div>
         <!-- /.social-auth-links -->
 
-        <a href="#">I forgot my password</a><br>
-        <a href="register.html" class="text-center">Register a new membership</a>
+        <a routerLink="/forgot-password" routerLinkActive="active" >I forgot my password</a><br>
+        <a routerLink="/register" routerLinkActive="active" class="text-center">Register a new membership</a>
 
     </div>
     <!-- /.login-box-body -->
